Added notes from meeting

--- a/paper.tex
+++ b/paper.tex
@@ -74,6 +74,21 @@ The authors of the present paper acknowledges financial support from Russian Sci
 
 \section {Preliminaries}\label{prelim}
 
+\section {Main results}
+
+\begin{dfn}
+ Let $u$,$v$ be elements of $B^n$ such that $v^Tu = 0$ and there exists $w \in B^n$ such that $<w,u> = a^N$.
+ In this context we define elements $Z^1(u,v)$ and 
+\end{dfn}
+
+for each $(u,v) \in \E_n(R) (e_1, e_2)$ we can find $y$ such that $(u,v,y) = g (e_1, e_2, e_3)$.
+
+$w^tu = a^N$, $z^Tv = a^N$, $x^T y = a^N$ + 6 additional orthogonality relations
+
+Computing $g = [Z^{1, N}(u xba^{2N}), Z^{2, N}(ua^{2N},v)]$ 
+$$ g = Z^{2, N}(ya^{2N} + uba^{5N},v) {Z^{2, N}(ya^{2N}, v)}^{-1} = Z^{2, N}(uba^{5N},v) = Z^2(uc, v)$$
+$$ g = ... = Z^1(u, vc)$$
+
 \printbibliography
 
 \end{document}
