--- a/paper.bib
+++ b/paper.bib
@@ -1,3 +1,9 @@
+@article{S15,
+author = {Sinchuk, S.},
+title = {On centrality of $K_2$ for {C}hevalley groups of type $\rE_\ell$},
+year = {2016},
+journal = {J. Pure Appl. Algebra}}
+
 @article{La,
 author = {Lavrenov, A.},
 title = {Another presentation for symplectic Steinberg groups},
