--- a/paper.tex
+++ b/paper.tex
@@ -101,7 +101,7 @@ First of all, we will need to give yet another definition of the relative linear
   \item $X^1(u, v) \cdot X^1(u, w) = X^1(u, v+w)$, $u \in \E(n,R) \cdot e_1$, $v, w \in I^n$;
   \item $X^2(u, v) \cdot X^2(w, v) = X^2(u+w, v)$, $u, w \in I^n$, $v \in \E(n,R) \cdot e_1$;
   \item ${}^{X^\sigma(u^2, v^2)} \! X^\tau(u^1, v^1) = X^\tau(T(u^2, v^2) \cdot u^1, T(v^2, u^2)^{-1} \cdot v^1)$, $\sigma, \tau = 1..2$;
-  \item $X^1(u, vb) = X^2(ub, v)$ for $(u,v) \in E(n,R) \cdot (e_1, e_2)$, $b\in I$.
+  \item $X^1(g \cdot e_1, g^* \cdot be_2) = X^2(g \cdot be_1, g^* \cdot e_2)$ where $g^* = {g^t}^{-1}$ is the contragradient matrix and $b\in I$.
  \end{enumerate}
  \end{itemize}
 \end{dfn}
@@ -116,8 +116,6 @@ It is easy to check the correctness of the above definition.
 
 The next step of the proof is to is construct certain elements in $\St(n, R)$ which are similar to Tulenbaev's elements $X_{u,v}(a)$ see~\cite[\S~1]{T}.
 
-
-
 Assume that $n \geq 4$. For the rest of this section $a$ denotes a nonnilpotent element of $R$.
 \begin{lemma}
  Let $u, v \in R^n$ be columns such that $v^t \cdot u = 0$ and there exists $w = w(u) \in R^n$ satisfying $w^t \cdot u = a^N$ for some natural number $N$.
@@ -125,10 +123,17 @@ Assume that $n \geq 4$. For the rest of this section $a$ denotes a nonnilpotent 
  \begin{itemize}
   \item $Z^{1}(u, v_1 + v_2) = Z^{1}(u, v_1) \cdot Z^{1}(u, v_2)$;
   \item $Z^{2}(v_1 + v_2, u) = Z^{2}(v_1, u) \cdot Z^{2}(v_2, u)$;
-  \item ${}^{g}\! Z^{\tau}(u, v) = Z^{\tau}(g \cdot u, g^* \cdot v)$, $\tau = 1..2$, $g \in \St(n, R)$ where $g^* = {g^t}^{-1}$ is the contragradient matrix.
+  \item ${}^{g}\! Z^{\tau}(u, v) = Z^{\tau}(g \cdot u, g^* \cdot v)$, $\tau = 1..2$, $g \in \St(n, R)$.
  \end{itemize}
 \end{lemma}
 \begin{proof} Both the construction of $Z^i$ and the relations for $Z^i$ are, in essence, just~\cite[Lemma~1.3]{T} applied twice. \end{proof}
+
+\begin{lemma}
+ For $u_1, u_2 \in R^n$ be columns such that $\overline{u_1} = g \cdot e_1$, $\overline{u_2} = g^* \cdot e_2$ for some $g \in \E(n, R_a)$.
+ Then for any $b\in I$ and $g',g'' \in M(n, R)$ such that $\overline{g'} = g$, $\overline{g''} = g^*$ one has 
+ $$Z^1(g' \cdot e_1, g'' \cdot be_2) = Z^2(g' \cdot be_1, g'' \cdot e_2).$$
+\end{lemma}
+
 
 %TODO: Why we can assume u_1^t \cdot u_2 = 0$?
 Now let $g \in \E(n, R_a)$ be such that $g(e_1, e_2) = (\overline{u_1}, \overline{u_2})$ for some $u_1, u_2\in R^n$, $u_1^t \cdot u_2 = 0$.
