--- a/paper.tex
+++ b/paper.tex
@@ -95,13 +95,13 @@ First of all, we will need to give yet another definition of the relative linear
   \item $X^1(u, v)$, where $u \in \E(n,R) \cdot e_1$, $v\ \in I^n$ such that $v^t \cdot u = 0$;
   \item $X^2(u, v)$, where $u \in I^n$, $v \in \E(n,R) \cdot e_1$ such that $v^t \cdot u = 0$.
  \end{enumerate}
-  Notice that the canonical image in $\E(n, R)$ of both $X^1(u, v)$ and $X^2(u, v)$ equals $T(u, v) = e_n + u \cdot v^T$.
+  Notice that $\phi$ maps both $X^1(u, v)$ and $X^2(u, v)$ to $T(u, v) = e_n + u \cdot v^T$.
   \item Relations:
   \begin{enumerate}
   \item $X^1(u, v) \cdot X^1(u, w) = X^1(u, v+w)$, $u \in \E(n,R) \cdot e_1$, $v, w \in I^n$;
   \item $X^2(u, v) \cdot X^2(w, v) = X^2(u+w, v)$, $u, w \in I^n$, $v \in \E(n,R) \cdot e_1$;
   \item ${}^{X^\sigma(u^2, v^2)} \! X^\tau(u^1, v^1) = X^\tau(T(u^2, v^2) \cdot u^1, T(v^2, u^2)^{-1} \cdot v^1)$, $\sigma, \tau = 1..2$;
-  \item $X^1(g \cdot e_1, g^* \cdot be_2) = X^2(g \cdot be_1, g^* \cdot e_2)$ where $g^* = {g^t}^{-1}$ is the contragradient matrix and $b\in I$.
+  \item $X^1(g \cdot e_1, g^* \cdot be_2) = X^2(g \cdot be_1, g^* \cdot e_2)$ where $b\in I$ and $g^* = {g^t}^{-1}$ denotes the contragradient matrix.
  \end{enumerate}
  \end{itemize}
 \end{dfn}
@@ -116,71 +116,55 @@ It is easy to check the correctness of the above definition.
 
 The next step of the proof is to is construct certain elements in $\St(n, R)$ similar to Tulenbaev's elements $X_{u,v}(a)$ see~\cite[\S~1]{T}.
 
-Assume that $n \geq 4$. For the rest of this section $a$ denotes a nonnilpotent element of $R$.
-
 Let $v\in R^n$ be a column.
-A column $w\in R^n$ is called \emph{$v$-decomposable} if it can be presented as a finite sum $w = \sum\limits_{i=1}^n w^i$ of columns such that each $w^i$ 
-has at least two zero entries. 
+A column $w\in R^n$ is called \emph{$v$-decomposable} if it can be presented as a finite sum $w = \sum\limits_{i=1}^n w^i$ such that each $w^i$ has at least two zero entries. 
 Denote by $D(v)$ the submodule of $R^n$ consisting of all $v$-decomposable columns.
-%For a column $v\in R^n$ denote by $I(v)$ the ideal of $R$ spanned by coordinates $v_1,\ldots, v_n$.
+For a column $v\in R^n$ denote by $I(v)$ the ideal of $R$ spanned by coordinates $v_1,\ldots, v_n$.
 
 Let $u,v,w\in R^n$ be columns such that $w^tv=0$.
-It is easy to check that $(uv)\cdot w = \sum_{i<j}w_{ij}$, where $w_{ij} = (w_iu_j - w_ju_i)(v_je_i - v_ie_j)\in{}\!A^n$ (cf.~\cite[Lemma~3.2]{Ka}).
-Such decomposition is called the {\it canonical} decomposition of $(uv)\cdot w$.
-In particular, this shows that row $a\cdot w$ is always $v$-decomposable for $a\in I(v)$, i.e. $I(v) \cdot O(v) \subseteq D(v)$.
+It is easy to check (cf.~\cite[Lemma~3.2]{Ka}) that 
+$$(uv)\cdot w = \sum_{i<j}w_{ij},\ \text{where}\ w_{ij} = (w_iu_j - w_ju_i)(v_je_i - v_ie_j)\in{}\!A^n.$$
+The above decomposition is called the \emph{canonical} decomposition of $(uv)\cdot w$.
+In particular, the above argument shows that row $a\cdot w$ is always $v$-decomposable for $a\in I(v)$, i.e. $I(v) \cdot O(v) \subseteq D(v)$.
 It is also obvious that $O(v)\subseteq O(bv)$, $D(v)\subseteq D(bv)$ for $b \in R$.
+%\end{enumerate}\end{lemma}
 
-Let $v$ be a (not neccessarily unimodular) column of height $n$, let $w$ be a $v$-decomposable row and $a$ be an element of $I(v)$.
-In this context Tulenbaev defines elements $X_{v,w}(a)$ of the Steinberg group $\St(n, A)$, $n\geq 4$ (see~\cite[\S~1]{T}).
-Tulenbaev requires $a \in I(v)$ in order to prove correctness of his definition.
+Denote by $B^1$ the subset of $R^n \times R^n \times R$ consisting of triples $(u, v, a)$ such that $v^t \cdot u = 0$, $v \in D(u)$, $a \in I(u)$.
+Denote by $B^2$ the set consisting of triples $(v, u, a)$ such that $(u, v, a) \in B^1$.
 
-Let us list certain useful properties of these elements.
-\begin{lemma}\label{T13} Let $n\geq 4$. Elements $X_{v,w}(a)$ satisfy the following relations:
-\begin{enumerate}
- \item $X_{v, w}(ab) = X_{v, bw}(a)$ for $w\in D(v)$, $b\in R$, $a\in I(v)$. If moreover $a\in b \cdot I(v)$ then $X_{v, w}(ab) = X_{bv, w}(a)$.
- \item $X_{v,w_1 + w_2}(a) = X_{v, w_1}(a) X_{v, w_2}(a)$, $w_1, w_2 \in D(v)$, $a\in I(v)$.
- \item \label{T133} For $g\in\St(n, A)$,  $w\in O(v)$, $a,b\in I(v)$  one has  $g^{-1}\cdot X_{v, bw}(a)\cdot g = X_{g^{-1}v, bwg}(a)$
- \item Let $a$ be a nonnilpotent element of $A$.
-       For $n\geq 5$ let $(v_1,v_2)\in M_{n\times 2}(A)$ be a matrix such that its image in $M_{n\times 2}(A_a)$ is unimodular.
-       Let $w \in {}^n\!A$ be a row such that $wv_1=wv_2=0$. Then for sufficiently large natural numbers $k, m$ one has
-       $$X_{v_1 + bv_2, a^kw}(a^m) = X_{v_1,a^kw}(a^m)\cdot X_{v_2,ba^kw}(a^m),\ b\in A.$$
-\end{enumerate}\end{lemma}
-
-
-
-\begin{lemma}
- Let $u, v \in R^n$ be columns such that $v^t \cdot u = 0$ and there exists $w = w(u) \in R^n$ satisfying $w^t \cdot u = a^N$ for some natural number $N$.
- In this context one can define certain elements $Z^{1}(u,v), Z^{2}(v, u)$ of $\St(n, R)$. These elements satisfy the following relations:
- \begin{itemize}
-  \item $Z^{1}(u, v_1 + v_2) = Z^{1}(u, v_1) \cdot Z^{1}(u, v_2)$;
-  \item $Z^{2}(v_1 + v_2, u) = Z^{2}(v_1, u) \cdot Z^{2}(v_2, u)$;
-  \item ${}^{g}\! Z^{\tau}(u, v) = Z^{\tau}(g \cdot u, g^* \cdot v)$, $\tau = 1..2$, $g \in \St(n, R)$.
- \end{itemize}
+\begin{lemma} \label{lem:Zproperties}
+Assume that $n \geq 4$.
+One can define two families of elements $Z^\tau(u, v, a) \in \St(n, R)$, $\tau=1,2$ parametrized by $(u, v, a) \in B^\tau$ satisfying the following properties
+ \begin{lemlist}
+  \item \label{rel:proj} $\phi(Z^\tau(u, v, a)) = e + uav^t \in \E(n, R)$, $(u,v,a) \in B^\tau$;
+  \item \label{rel:add1} $Z^{1}(u, v_1 + v_2, a) = Z^{1}(u, v_1, a) \cdot Z^{1}(u, v_2, a)$;
+  \item \label{rel:add2} $Z^{2}(v_1 + v_2, u, a) = Z^{2}(v_1, u, a) \cdot Z^{2}(v_2, u, a)$;
+  \item \label{rel:conj} ${}^{g}\! Z^{\tau}(u, v, a) = Z^{\tau}(\phi(g) \cdot u, \phi(g)^* \cdot v, a)$, $\tau = 1,2$, $g \in \St(n, R)$.
+ \end{lemlist}
 \end{lemma}
-\begin{proof} Both the construction of $Z^i$ and the relations for $Z^i$ are, in essence, just~\cite[Lemma~1.3]{T} applied twice. \end{proof}
+\begin{proof}
+One constructs the elements $Z^1(u,v,a)$ in exactly the same way as Tulenbaev constructs his elements $X_{u,v}(a)$ (see definitions preceding~\cite[Lemma~1.2]{T}).
+Next, the elements $Z^2(u,v,a)$ are constructed by ``transposing'' Tulenbaev's construction.
 
+All the properties (with the exception of the last one in the case $n=4$) can be proved in exactly the same fashion as in~\cite[Lemma~1.3]{T}.
+To check the last property in the case $n=4$ one has to use the argument of W. van~der~Kallen (cf.~\cite{Ka}).
+%TODO: Write more details
+\end{proof}
+
+For the rest of this section $a$ denotes a nonnilpotent element of $R$.
 \begin{lemma}
- For $u_1, u_2 \in R^n$ be columns such that $\overline{u_1} = g \cdot e_1$, $\overline{u_2} = g^* \cdot e_2$ for some $g \in \E(n, R_a)$.
- Then for any $b\in I$ and $g',g'' \in M(n, R)$ such that $\overline{g'} = g$, $\overline{g''} = g^*$ one has 
- $$Z^1(g' \cdot e_1, g'' \cdot be_2) = Z^2(g' \cdot be_1, g'' \cdot e_2).$$
+Let $u,v,w,z \in R^n$ be columns such that 
+\begin{equation*} u^t \cdot v = 0,\ w^t \cdot v = c \in R,\ u^t \cdot z = 0,\ w^t \cdot z = 0. \end{equation*}
+Assume, moreover, that $(u, v, a) \in B^1$, $(w, z, a) \in B^2$, then one has $$Z^1(u, ac \cdot z, a) = Z^2(ac \cdot u, z, a).$$
 \end{lemma}
-
-
-%TODO: Why we can assume u_1^t \cdot u_2 = 0$?
-Now let $g \in \E(n, R_a)$ be such that $g(e_1, e_2) = (\overline{u_1}, \overline{u_2})$ for some $u_1, u_2\in R^n$, $u_1^t \cdot u_2 = 0$.
-It is easy to find $w_1, w_2 \in R^n$ such that $w_1^t \cdot u_1 = a^{N_1}$, $w_2^t \cdot u_2 = a^{N_2}$.
-
-
-$Z^1(u, v) = Z^2(v, u)$.
-
-
-for each $(u,v) \in \E_n(R) (e_1, e_2)$ we can find $y$ such that $(u,v,y) = g (e_1, e_2, e_3)$.
-
-$w^tu = a^N$, $z^Tv = a^N$, $x^T y = a^N$ + 6 additional orthogonality relations
-
-Computing $g = [Z^{1, N}(u xba^{2N}), Z^{2, N}(ua^{2N},v)]$ 
-$$ g = Z^{2, N}(ya^{2N} + uba^{5N},v) {Z^{2, N}(ya^{2N}, v)}^{-1} = Z^{2, N}(uba^{5N},v) = Z^2(uc, v)$$
-$$ g = ... = Z^1(u, vc)$$
+\begin{proof}
+Direct computation using \cref{lem:Zproperties} shows that
+ \begin{multline*}
+ Z^2(ac \cdot u, z, a) = Z^2((e+uav^t) w, (e-vau^t)z,a) \cdot Z^2(-w,z,a) = \\
+  {}^{Z^1(u,v,a)} \! Z^2(w,z,a) \cdot Z^2(-w,z,a) = [Z^1(u, v, a), Z^2(w, z, a)] = Z^1(u,v,a) \cdot {}^{Z^2(w,z,a)}\! Z^1(u,-v,a) = \\
+    = Z^1(u,v,a) \cdot Z^1((e+waz^t)u,-(e-zaw^t)v,a) = Z^1(u,ac \cdot z,a). \qedhere
+ \end{multline*}  
+\end{proof}
 
 \subsection{Centrality of orthogonal $K_2$.} 
 
