Written down proof of relation 4

--- a/paper.bib
+++ b/paper.bib
@@ -1,8 +1,11 @@
 @article{S15,
 author = {Sinchuk, S.},
-title = {On centrality of $K_2$ for {C}hevalley groups of type $\rE_\ell$},
+title = {On centrality of $\mathrm{K}_2$ for {C}hevalley groups of type $\rE_\ell$},
 year = {2016},
-journal = {J. Pure Appl. Algebra}}
+journal = {J. Pure Appl. Algebra},
+volume = {220},
+pages = {857--875},
+doi = {10.1016/j.jpaa.2015.08.003}}
 
 @article{La,
 author = {Lavrenov, A.},
@@ -200,7 +203,7 @@ title = {Can one see the signs of the structure constants?}}
 @article{T,
 title = {The Steinberg group of a polynomial ring},
 author = {Tulenbaev, M.~S.},
-journal = {Math. USSR Sbornik},
+journal = {Math. USSR Sb.},
 volume = {45},
 year = {1983},
 issue = {1},
