--- a/paper.tex
+++ b/paper.tex
@@ -2,9 +2,15 @@
 \usepackage{amscd, amsmath, amssymb, amsthm, amsfonts, amstext, verbatim, enumitem, graphicx, mathtools, xfrac, tikz-cd, nameref, thmtools, hyperref}
 \usepackage[utf8]{inputenc}
 \usepackage[backend=biber, citestyle=numeric-comp, natbib=true, sortlocale=en_US, url=false, doi=false, eprint=true, maxbibnames=4]{biblatex}            
-\addbibresource{paper.bib}
 \usepackage[activate={true,nocompatibility}]{microtype}
 \usepackage[capitalize]{cleveref}
+
+%Bibliography
+\renewbibmacro{in:}{\ifentrytype{article}{}{\printtext{\bibstring{in}\intitlepunct}}}
+\newbibmacro{string+doi}[1]{\iffieldundef{doi}{\iffieldundef{url}{#1}{\href{\thefield{url}}{#1}}}{\href{http://dx.doi.org/\thefield{doi}}{#1}}}
+\DeclareFieldFormat{title}{\usebibmacro{string+doi}{\mkbibemph{#1}}}
+\DeclareFieldFormat[article, inproceedings, inbook, thesis]{title}{\usebibmacro{string+doi}{\mkbibquote{#1}}}
+\addbibresource{paper.bib}
             
 \newlist{thmlist}{enumerate}{1} \setlist[thmlist]{label=(\roman{thmlisti}), ref=\thethm.(\roman{thmlisti}),noitemsep} \Crefname{thmlisti}{Theorem}{Theorems}
 \newlist{lemlist}{enumerate}{1} \setlist[lemlist]{label=(\roman{lemlisti}), ref=\thelemma.(\roman{lemlisti}),noitemsep} \Crefname{lemlisti}{Lemma}{Lemmas}
@@ -56,7 +62,7 @@
 \newcommand\restr[2]{{\left.\kern-\nulldelimiterspace #1 \vphantom{\big|}\right|_{#2}}}
 \newcommand*\MapsTo{\xrightarrow[\raisebox{0.25 em}{\smash{\ensuremath{\sim}}}]{}}  
 
-\title{Local-global principle for $\K_2$ of Chevalley groups}
+\title{A local-global principle for $\K_2$ of Chevalley groups}
 \keywords {Chevalley groups, Steinberg groups, $K_2$-functor. {\em Mathematical Subject Classification (2010):} 19C09; 20G35}
 \author {Andrei Lavrenov, Sergey Sinchuk}
 \email {avlavrenov {\it at} gmail.com, sinchukss {\it at} gmail.com}
@@ -95,12 +101,12 @@ First of all, we will need to give yet another definition of the relative linear
   \item $X^1(u, v)$, where $u \in \E(n,R) \cdot e_1$, $v\ \in I^n$ such that $v^t \cdot u = 0$;
   \item $X^2(u, v)$, where $u \in I^n$, $v \in \E(n,R) \cdot e_1$ such that $v^t \cdot u = 0$.
  \end{enumerate}
-  Notice that $\phi$ maps both $X^1(u, v)$ and $X^2(u, v)$ to $T(u, v) = e_n + u \cdot v^T$.
+  Notice that $\phi$ maps both $X^1(u, v)$ and $X^2(u, v)$ to $T(u, v) = e_n + u \cdot v^T \in \E(n, R, I)$.
   \item Relations:
   \begin{enumerate}
   \item $X^1(u, v) \cdot X^1(u, w) = X^1(u, v+w)$, $u \in \E(n,R) \cdot e_1$, $v, w \in I^n$;
   \item $X^2(u, v) \cdot X^2(w, v) = X^2(u+w, v)$, $u, w \in I^n$, $v \in \E(n,R) \cdot e_1$;
-  \item ${}^{X^\sigma(u^2, v^2)} \! X^\tau(u^1, v^1) = X^\tau(T(u^2, v^2) \cdot u^1, T(v^2, u^2)^{-1} \cdot v^1)$, $\sigma, \tau = 1..2$;
+  \item ${}^{X^\sigma(u^2, v^2)} \! X^\tau(u^1, v^1) = X^\tau(T(u^2, v^2) \cdot u^1, T(v^2, u^2)^{-1} \cdot v^1)$, $\sigma, \tau = 1,2$;
   \item $X^1(g \cdot e_1, g^* \cdot be_2) = X^2(g \cdot be_1, g^* \cdot e_2)$ where $b\in I$ and $g^* = {g^t}^{-1}$ denotes the contragradient matrix.
  \end{enumerate}
  \end{itemize}
@@ -117,53 +123,72 @@ It is easy to check the correctness of the above definition.
 The next step of the proof is to is construct certain elements in $\St(n, R)$ similar to Tulenbaev's elements $X_{u,v}(a)$ see~\cite[\S~1]{T}.
 
 Let $v\in R^n$ be a column.
-A column $w\in R^n$ is called \emph{$v$-decomposable} if it can be presented as a finite sum $w = \sum\limits_{i=1}^n w^i$ such that each $w^i$ has at least two zero entries. 
-Denote by $D(v)$ the submodule of $R^n$ consisting of all $v$-decomposable columns.
-For a column $v\in R^n$ denote by $I(v)$ the ideal of $R$ spanned by coordinates $v_1,\ldots, v_n$.
+Denote by $O(v)$ the submodule of $R^n$ consisting of all columns $w$ such that $w^t \cdot v = 0$.
+A column $w\in R^n$ is called \emph{$v$-decomposable} if it can be presented as a finite sum $w = \sum\limits_{i=1}^n w^i$ such that each $w^i$ has at least two zero entries and $v^t \cdot w^i = 0$. 
+Denote by $D(v)$ the submodule of $O(v)$ consisting of all $v$-decomposable columns.
+For a column $v\in R^n$ denote by $I(v)$ the ideal of $R$ spanned by its entries $v_1,\ldots, v_n$.
 
 Let $u,v,w\in R^n$ be columns such that $w^tv=0$.
 It is easy to check (cf.~\cite[Lemma~3.2]{Ka}) that 
 $$(uv)\cdot w = \sum_{i<j}w_{ij},\ \text{where}\ w_{ij} = (w_iu_j - w_ju_i)(v_je_i - v_ie_j)\in{}\!A^n.$$
 The above decomposition is called the \emph{canonical} decomposition of $(uv)\cdot w$.
-In particular, the above argument shows that row $a\cdot w$ is always $v$-decomposable for $a\in I(v)$, i.e. $I(v) \cdot O(v) \subseteq D(v)$.
-It is also obvious that $O(v)\subseteq O(bv)$, $D(v)\subseteq D(bv)$ for $b \in R$.
-%\end{enumerate}\end{lemma}
+In particular, this shows that the column $a\cdot w$ is always $v$-decomposable for $a\in I(v)$, $w \in O(v)$, i.\,e. $I(v) \cdot O(v) \subseteq D(v)$.
+It is also straightforward to check that $D(v)\subseteq D(bv)$, $b \cdot D(v) \subseteq D(v)$ for $b \in R$.
 
 Denote by $B^1$ the subset of $R^n \times R^n \times R$ consisting of triples $(u, v, a)$ such that $v^t \cdot u = 0$, $v \in D(u)$, $a \in I(u)$.
 Denote by $B^2$ the set consisting of triples $(v, u, a)$ such that $(u, v, a) \in B^1$.
 
 \begin{lemma} \label{lem:Zproperties}
 Assume that $n \geq 4$.
-One can define two families of elements $Z^\tau(u, v, a) \in \St(n, R)$, $\tau=1,2$ parametrized by $(u, v, a) \in B^\tau$ satisfying the following properties
+One can define two families of elements $Z^\tau(u, v, a)$, $\tau=1,2$ of the group $\St(n, R)$ parametrized by $(u, v, a) \in B^\tau$ satisfying the following properties:
  \begin{lemlist}
-  \item \label{rel:proj} $\phi(Z^\tau(u, v, a)) = e + uav^t \in \E(n, R)$, $(u,v,a) \in B^\tau$;
-  \item \label{rel:add1} $Z^{1}(u, v_1 + v_2, a) = Z^{1}(u, v_1, a) \cdot Z^{1}(u, v_2, a)$;
-  \item \label{rel:add2} $Z^{2}(v_1 + v_2, u, a) = Z^{2}(v_1, u, a) \cdot Z^{2}(v_2, u, a)$;
-  \item \label{rel:conj} ${}^{g}\! Z^{\tau}(u, v, a) = Z^{\tau}(\phi(g) \cdot u, \phi(g)^* \cdot v, a)$, $\tau = 1,2$, $g \in \St(n, R)$.
+  \item \label{item:proj} $\phi(Z^\tau(u, v, a)) = e + uav^t \in \E(n, R)$, $(u,v,a) \in B^\tau$;
+  \item \label{item:add1} $Z^{1}(u, v_1 + v_2, a) = Z^{1}(u, v_1, a) \cdot Z^{1}(u, v_2, a)$;
+  \item \label{item:add2} $Z^{2}(v_1 + v_2, u, a) = Z^{2}(v_1, u, a) \cdot Z^{2}(v_2, u, a)$;
+  \item \label{item:scalar} for $\tau=1,2$ and $b \in R$ if $(u,vb,a), (ub, v, a) \in B^\tau$ then one has
+   $$Z^\tau(u,vb, a) = Z^\tau(u, v, ab) = Z^\tau (ub, v, a);	$$
+  \item \label{item:conj} ${}^{g}\! Z^{\tau}(u, v, a) = Z^{\tau}(\phi(g) \cdot u, \phi(g)^* \cdot v, a)$, $\tau = 1,2$, $g \in \St(n, R)$.
  \end{lemlist}
 \end{lemma}
 \begin{proof}
 One constructs the elements $Z^1(u,v,a)$ in exactly the same way as Tulenbaev constructs his elements $X_{u,v}(a)$ (see definitions preceding~\cite[Lemma~1.2]{T}).
-Next, the elements $Z^2(u,v,a)$ are constructed by ``transposing'' Tulenbaev's construction.
+Next, the elements $Z^2(u,v,a)$ are obtained by ``transposing'' Tulenbaev's construction.
 
-All the properties (with the exception of the last one in the case $n=4$) can be proved in exactly the same fashion as in~\cite[Lemma~1.3]{T}.
+All the properties (with the exception of the last one in the case $n=4$) can be proved by the same token as in~\cite[Lemma~1.3]{T}.
 To check the last property in the case $n=4$ one has to use the argument of W. van~der~Kallen (cf.~\cite{Ka}).
 %TODO: Write more details
 \end{proof}
 
-For the rest of this section $a$ denotes a nonnilpotent element of $R$.
-\begin{lemma}
-Let $u,v,w,z \in R^n$ be columns such that 
-\begin{equation*} u^t \cdot v = 0,\ w^t \cdot v = c \in R,\ u^t \cdot z = 0,\ w^t \cdot z = 0. \end{equation*}
-Assume, moreover, that $(u, v, a) \in B^1$, $(w, z, a) \in B^2$, then one has $$Z^1(u, ac \cdot z, a) = Z^2(ac \cdot u, z, a).$$
+For the rest of this section $a$ denotes a nonnilpotent element of $R$ and $\lambda_a \colon R \rightarrow R_a$ is the morphism of principal localization at $a$.
+\begin{lemma} For any $g \in \E(n, R_a)$ there exist $u, v \in R^n$ and sufficiently large natural numbers $k$, $m$ such that the following facts hold:
+\begin{lemlist}
+ \item \label{item:lifts} $\lambda_a(u) = g \cdot a^k e_1$, $\lambda_a(v) = g^* \cdot a^k e_2$ and $u^t \cdot v = 0$;
+ \item \label{item:correctness} $(u, v, a^m) \in B^1 \cap B^2$;
+ \item \label{item:relation4} for $b \in R$ divisible by some sufficiently large power of $a$ one has 
+             $$Z^1(u, b \cdot v, a^m) = Z^2(b \cdot u, v, a^m).$$
+\end{lemlist}
 \end{lemma}
 \begin{proof}
-Direct computation using \cref{lem:Zproperties} shows that
+It is straightforward to choose $u$ and $v$ satisfying the first requirement of the lemma.
+
+To satisfy the second requirement of the lemma we need to choose $u$, $v$ in such a way that $u \in D(v)$, $v \in D(u)$.
+This can also be accomplished if we choose large enough $k$ on the first step.
+Indeed, notice that $I(u) = a^{k_1}$, $I(v) = a^{k_2}$ for some natural $k_1$, $k_2$ hence for $u' = a^{k_2} \cdot u$ and $v' = a^{k_1} \cdot v$ one has
+$$u' \in I(v) \cdot O(v) \subseteq D(v) \subseteq D(v'),\quad v' \in I(u) \cdot O(u) \subseteq D(u) \subseteq D(u'),$$
+as required.
+
+In fact, we can also choose two extra columns $x, y \in R^n$ and a large natural $p$ in such a way that vectors $u,v,x,y$ additionally satisfy the following properties
+\begin{equation*} \lambda_a(x) = g^* \cdot a^k e_3,\ \lambda_a(y) = g \cdot a^k e_3,\ y^t \cdot x = a^p \in R, \end{equation*}
+\begin{equation*} u^t \cdot x = 0,\ u^t \cdot v = 0,\ y^t \cdot v = 0, \end{equation*}
+\begin{equation*} (u, x, a^m) \in B^1,\ (y, v, a^m) \in B^2. \end{equation*}
+
+Now direct computation using \cref{lem:Zproperties} shows that
  \begin{multline*}
- Z^2(ac \cdot u, z, a) = Z^2((e+uav^t) w, (e-vau^t)z,a) \cdot Z^2(-w,z,a) = \\
-  {}^{Z^1(u,v,a)} \! Z^2(w,z,a) \cdot Z^2(-w,z,a) = [Z^1(u, v, a), Z^2(w, z, a)] = Z^1(u,v,a) \cdot {}^{Z^2(w,z,a)}\! Z^1(u,-v,a) = \\
-    = Z^1(u,v,a) \cdot Z^1((e+waz^t)u,-(e-zaw^t)v,a) = Z^1(u,ac \cdot z,a). \qedhere
+ Z^2(a^{m+p}b \cdot u, v, a^m) = Z^2(b \cdot (e+a^m \cdot ux^t)y, (e-a^m \cdot xu^t)v,a^m) \cdot Z^2(-by,v,a^m) = \\
+  = [Z^1(u, x, a^m), Z^2(b \cdot y, v, a^m)] = \\
+    = Z^1(u,x,a^m) \cdot Z^1((e+a^mb \cdot yv^t)u,-(e- a^mb \cdot vy^t)x,a^m) = Z^1(u,a^{m+p}b \cdot v,a^m), \qedhere   
  \end{multline*}  
+hence the third assertion of the lemma follows. 
 \end{proof}
 
 \subsection{Centrality of orthogonal $K_2$.} 
