Imported Andrei's source

--- a/paper.bib
+++ b/paper.bib
@@ -1,4 +1,4 @@
-@article{S15,
+@article{SCh,
 author = {Sinchuk, S.},
 title = {On centrality of $\mathrm{K}_2$ for {C}hevalley groups of type $\rE_\ell$},
 year = {2016},
@@ -7,7 +7,7 @@ volume = {220},
 pages = {857--875},
 doi = {10.1016/j.jpaa.2015.08.003}}
 
-@article{La,
+@article{Lav,
 author = {Lavrenov, A.},
 title = {Another presentation for symplectic Steinberg groups},
 year = {2015},
@@ -81,7 +81,7 @@ pages = {219--230},
 year = {1986},
 doi = {10.2748/tmj/1178228489}}
 
-@article{Lo,
+@article{Lod,
 author = {Loday, J.-L.},
 journal = {J. Algebra},
 title = {Cohomologie et groupes de Steinberg relatifs},
@@ -101,7 +101,7 @@ pages = {1271-1307},
 year = {1983},
 doi = {10.1080/00927878308822906}}
 
-@inproceedings{Ka,
+@inproceedings{vdK,
 title={Another presentation for Steinberg groups},
 author={Kallen, W.~van~der},
 booktitle={Indag. Math.},
@@ -111,7 +111,7 @@ pages={304--312},
 year={1977},
 doi={10.1016/1385-7258(77)90026-9}}
 
-@article{Ke,
+@article{Keu,
 title = {The relativization of $\mathrm{K}_2$},
 author  = {Keune, F.},
 journal = {J. Algebra},
@@ -161,7 +161,7 @@ year = {1978},
 pages = {77--108},
 doi = {10.4099/math1924.4.77}}
 
-@article{Su,
+@article{Sus,
 author = {Suslin, A.},
 title = {On the structure of the special linear group over commutative rings},
 journal = {Math. USSR Izv.},
@@ -200,7 +200,7 @@ pages = {519--543},
 journal = {St. Petersburg Math. J.},
 title = {Can one see the signs of the structure constants?}}
 
-@article{T,
+@article{Tul,
 title = {The Steinberg group of a polynomial ring},
 author = {Tulenbaev, M.~S.},
 journal = {Math. USSR Sb.},
