Further expanded the introduction

--- a/paper.bib
+++ b/paper.bib
@@ -17,7 +17,12 @@ issue = {9},
 pages = {3755--3780},
 journal = {J. Pure Appl. Algebra}}
 
-@online{La2,
+@online{Lav2,
+author = {Lavrenov, A.},
+title  = {A local--global principle for symplectic $\Kt$},
+journal = {to appear}}
+
+@online{LaRSS,
 author = {Lavrenov, A.},
 title = {Relative symplectic Steinberg group},
 archivePrefix = "arXiv",
