--- a/paper.tex
+++ b/paper.tex
@@ -84,11 +84,11 @@
 \title{On centrality of orthogonal $\Kt$}
 \keywords {Steinberg groups, $K_2$-functor. {\em Mathematical Subject Classification (2010):} 19C09}
 
-\author{Sergey Sinchuk}
-\email{sinchukss {\it at} gmail.com}
-
 \author {Andrei Lavrenov}
 \email {avlavrenov {\it at} gmail.com}
+
+\author{Sergey Sinchuk}
+\email{sinchukss {\it at} gmail.com}
 
 \date {\today}
 \thanks{Authors of the present paper acknowledge the financial support from Russian Science Foundation grant 14-11-00297}
@@ -117,19 +117,19 @@ For $\Phi$ of rank $\geq 2$ the abstract group $\GG(\Phi, R)$ contains a large n
 The quotient group functor $\Ko(\Phi, R)=\GG(\Phi, R)/\E(\Phi, R)$ is called the \emph{unstable $\Ko$-functor}.
 This functor shares many properties with its stable counterpart $\mathrm{SK}_1(R) = \lim\limits_{l\to\infty}\Ko(\rA_\ell, R)$ which, in turn, is an essential direct summand of $\Ko(R)$.
 
-Similarly to the definition of the algebraic $\Kt$-functor, one can define $\Kt(\Phi, R)$ as the kernel of the canonical projection $\varphi\colon\St(\Phi, R)\twoheadrightarrow \E(\Phi, R)$.
+Similarly to the definition of the algebraic $\Kt$-functor, one can define $\Kt(\Phi, R)$ as the kernel of the canonical projection $\phi\colon\St(\Phi, R)\twoheadrightarrow \E(\Phi, R)$.
 Here $\St(\Phi, R)$ stands for the \emph{Steinberg group} of type $\Phi$, i.\,e. the group defined by formal generators $x_\alpha(\xi)$ modeling root unipotents $t_\alpha(\xi)$
-and the explicit list of relations called Steinberg relations. The projection $\varphi$ is defined by the identity $\varphi(x_\alpha(\xi))=t_\alpha(\xi)$.
+and the explicit list of relations called Steinberg relations (see~\cref{sec:prelim}). 
 
-It is classically known that $\Kt(\Phi, R)$ is a central subgroup of $\St(\Phi, R)$ if $R$ is commutative local ring and $\Phi$ has rank $\geq 2$ (see \cite{Stein}).
+It is classically known that $\Kt(\Phi, R)$ is a central subgroup of $\St(\Phi, R)$ if $R$ is commutative local ring and $\Phi$ has rank $\geq 2$ (see \cite{St73}).
 However, to prove that centrality of $\Kt$ holds for \emph{arbitrary} $R$ is much harder.
 The first result in this direction was obtained in 1977 by W. van~der~Kallen for $\Phi=\rA_\ell$, $\ell\geq 3$ using the technique called ``another presentation''.
-Using a similar approach, in \cite{Lav} the first-named author has established centrality of $\Kt(\rC_\ell, R)$ for $\ell\geq 3$.
+Using a similar approach, the first-named author has established centrality of $\Kt(\rC_\ell, R)$ for $\ell\geq 3$, see \cite{Lav}.
 In turn, the key result of this paper is the following theorem.
 \begin{tm}\label{tm:centrality}  Let $R$ be an arbitrary commutative ring and $\ell\geq 4$ then 
 the group $\Kt(\rD_\ell, R)$ is contained in the centre of $\St(\rD_\ell, R)$. \end{tm}
-Notice that the analogous assertion for $\Phi=\rE_\ell$, $\ell=6,7,8$ has been demonstrated by the second named author in \cite{SCh}.
-Our proof of \cref{tm:centrality} follows the same lines as in \cite[Theorem~1]{SCh} and, essentially, boils down to the proof of the following local-global principle.
+Notice that the analogous statement in the case $\Phi=\rE_\ell$, $\ell=6,7,8$ has been demonstrated by the second named author in \cite{SCh}.
+\cref{tm:centrality} is essentially a corollary of the following local-global principle.
 \begin{tm}\label{tm:lg-principle} Let $\Phi$ be an irreducible simply-laced root system of rank $\geq 3$ and $R$ be arbitrary commutative ring.
 Then an element $g\in\St(\Phi,\,R[X])$ satisfying $g(0)=1\in\St(\Phi,\,R)$ is trivial in $\St(\Phi,\,R[X])$
 if and only if the elements $g_M\in\St(\Phi,\,R_M[X])$ are trivial for all maximal ideals $M\triangleleft R$. \end{tm} 
@@ -138,34 +138,49 @@ The special case $\Phi=\rA_\ell$, $\ell\geq 4$ of \cref{tm:lg-principle} was dem
 while similar assertions for $\Phi=\rC_\ell$, $\ell\geq 3$ and $\Phi=\rE_\ell$, $\ell=6,7,8$ have been established in \cite{Lav2} and \cite{SCh}, respectively.
 The special cases $\Phi=\rA_3$ and $\Phi=\rD_\ell$, $\ell\geq 4$ of \cref{tm:lg-principle} are new and have not been known before.
 
+There are known counterexamples to centrality of $\Kt$ in the rank $2$ case (see~\cite{W}).
+This shows that the assumption on the rank of $\Phi$ in \cref{tm:lg-principle} is strict.
+
 Compare \cref{tm:lg-principle} with the local-global principle for $\Ko$ which states that an element of the congruence subgroup $g\in \GG(\Phi,\,R[X], XR[X])$ is elementary
 (i.\,e. lies in $\E(\Phi, R[X])$) if and only if $g_M=1\in\E(\Phi,\,R_M)$ for all maximal ideals $M \triangleleft R$.
 
+Our proof of \cref{tm:lg-principle} follows the same lines as in \cite[Theorem~1]{SCh}.
+More concretely, using the same patching technique as in \cite{SCh} we reduce the problem to the case $\Phi=\rA_3$.
+Then, we formulate and prove a new presentation of the linear group $\St(4, R)$ and then utilize it to reprove 
+Tulenbaev's key lemma (cf. \cite[Lemma~2.3]{Tul}) in the rank $3$ case.
+
 The rest of the paper is organised as follows. 
-In \cref{sec:yap} we formulate ``yet another presentation'' for the rank $3$ linear Steinberg groups $\St(4,\,R)=\St(\mathrm A_3,\,R)$.
-This presentation allows us to reprove Tulenbaev's key lemma \cite[Lemma~2.3]{Tul} under a weaker assumption on the rank of $\Phi$.
+In \cref{sec:yap} we formulate ``yet another presentation'' for the rank $3$ Steinberg groups.
 %It mimics the standart vector representation of $\SL(n,\,R)$, therefore in the first section we use representations and corresponding vector notation. 
-Finally, in \cref{sec:patching} we apply patching techniques from \cite{SCh} to deduce our main results.
+Finally, in \cref{sec:patching} we prove our main results.
 %There we switch to the root notation.
 
-\section{Principal notation}
-In the present paper $R$ denotes commutative (associative, unital) ring, $l\geq3$, and $n=l+1\geq4$, $R^n$ is a free (right) $R$-module with basis $e_1,\ldots,e_n$, 
-$\GL(n,\,R)$ is a group of invertible $n\times n$ matrices over $R$, $\E(n,\,R)$ its elementary subgroup generated by elementary transvections 
+\section{Preliminaries} \label{sec:prelim}
+Throughout this paper $R$ denotes an associative commutative ring with identity.
+All commutators are left-normed, i.\,e. $[x,\,y]=xyx\inv y\inv$. 
 
-Tulenbaev used {\it another presentation} for a relative Steinberg group to prove a local--global principle for a linear Steinberg group~\cite{Tul}. 
-This relative another presentation was inspired by the {\it absolute} one of van der Kallen~\cite{vdK}. 
-However, Tulenbaev's presentation can only be used for $\St(l+1,\,R)=\St(\mathrm A_l,\,R)$, $l\geq4$.
+%Tulenbaev used {\it another presentation} for a relative Steinberg group to prove a local--global
+%principle for a linear Steinberg group~\cite{Tul}. 
+%This relative another presentation was inspired by the {\it absolute} one of van der Kallen~\cite{vdK}. 
+%However, Tulenbaev's presentation can only be used for $\St(l+1,\,R)=\St(\mathrm A_l,\,R)$, $l\geq4$.
 
-Tulenbaev's result can be applied to the subsystems of type $\mathrm A_4$ inside $\mathrm E_l$ and ``glued'' to get a local--global principle for Steinberg groups of type $\mathrm E_l$~\cite{SCh}. 
-To use this glueing method for groups of type $\mathrm D_l$ as well one has to work with subsystems of type $\mathrm A_3$ instead, and thus extend Tulenbaev's result to the case of $\mathrm A_3$.
+%Tulenbaev's result can be applied to the subsystems of type $\mathrm A_4$ inside $\mathrm E_l$ and ``glued'' 
+% to get a local--global principle for Steinberg groups of type $\mathrm E_l$~\cite{SCh}. 
+%To use this glueing method for groups of type $\mathrm D_l$ as well one has to work with subsystems 
+%of type $\mathrm A_3$ instead, and thus extend Tulenbaev's result to the case of $\mathrm A_3$.
 
-Recently, the local--global principle was obtained for Steinberg groups of type $\mathrm C_l$ starting from rank 3~\cite{Lav2}. 
-That is another motivation to consider the linear Steinberg group in rank 3.
+%Recently, the local--global principle was obtained for Steinberg groups of type $\mathrm C_l$ starting from rank 3~\cite{Lav2}. 
+%That is another motivation to consider the linear Steinberg group in rank 3.
 
-$$\{t_{ij}(r)=1+e_{ij}r\mid1\leq i\neq j\leq n,\ r\in R\},$$
-where 1 stands for the identity matrix and $e_{ij}$ for the matrix unit. The Steinberg group is a group given by formal generators
-$$\{x_{ij}(r)\mid1\leq i\neq j\leq n,\ r\in R\}$$
-and Steinberg relations
+We denote by $R^n$ the free $R$-module with basis $e_1,\ldots,e_n$ and by $\Um(n,\,R)$ the subset of unimodular columns $v\in R^n$ 
+whose entries generate $R$ as an ideal.
+
+As usual, $\E(n, R)=\E(\rA_{n-1}, R)$ denotes the elementary group, i.\,e. the subgroup of the general linear group $\GL(n, R)$ generated by transvections
+$t_{ij}(r)=1+r \cdot e_{ij}$, $1\leq i\neq j\leq n$, $r\in R$,
+where 1 stands for the identity matrix and $e_{ij}$ for the matrix unit.
+
+The Steinberg group $\St(n, R) = \St(\rA_{n-1}, R)$ is the group presented by generators
+$x_{ij}(r)$, $1\leq i\neq j\leq n$, $r\in R\}$ and relations
 \setcounter{equation}{0}
 \renewcommand{\theequation}{S\arabic{equation}}
 \begin{align}
@@ -173,26 +188,23 @@ and Steinberg relations
 &[x_{ij}(r),\,x_{hk}(s)]=1,\text{ for }h\neq j,\ k\neq i,\\
 &[x_{ij}(r),\,x_{jk}(s)]=x_{ik}(rs).
 \end{align}
-All commutators in the present paper are left-normed, $[x,\,y]=xyx\inv y\inv$. 
-Denote $\phi\colon\St(n,\,R)\rightarrow\E(n,\,R)$ a natural projection sending $x_{ij}(r)$ to $t_{ij}(r)$.
+The natural projection $\phi\colon\St(n,\,R)\rightarrow\E(n,\,R)$ sends $x_{ij}(r)$ to $t_{ij}(r)$.
 
-Suslin showed that (already for $n\geq3$) the elementary group coincides with the subgroup of $\GL(n,\,R)$ generated by matrices
-$$\{t(u,\,v)=1+uv^t\mid u\in\Um(n,\,R),\ v\in R^n,\ u^tv=0\},$$
-where $\Um(n,\,R)$ is a set of unimodular coloumns of $R^n$, i.e., such that their entries generate the unit ideal of $R$, $u^t$ stands for $u$ {\it transposed}~\cite{Sus}.
+In \cite{Sus} Suslin showed for $n\geq 3$ that the elementary group $\E(n, R)$ coincides with the subgroup of $\GL(n,\,R)$ generated by matrices
+of the form $t(u,\,v)=1+uv^t$ where $u\in\Um(n,\,R)$, $v\in R^n$ and $u^tv=0$. Here $u^t$ stands for the transpose of $u$.
 This result clearly implies that $\E(n,\,R)$ is normal inside $\GL(n,\,R)$.
-Then, van der Kallen developed Suslin's ideas and showed that the Steinberg group $\St(n,\,R)$ is isomorphic to a group defined by a set of generators
-$$\{X(u,\,v)\mid u\in\Um(n,\,R),\ v\in R^n,\ u^tv=0\}$$ and relations
+Afterwards, W.~van~der~Kallen developed Suslin's ideas and showed for $n\geq4$ that the Steinberg group $\St(n,\,R)$ is isomorphic to the group presented by generators
+$$\{X(u,\,v)\mid u\in\Um(n,\,R),\ v\in R^n,\ u^tv=0\}$$ and the following list of relations (see~\cite{vdK}):
 \setcounter{equation}{0} \renewcommand{\theequation}{K\arabic{equation}}
 \begin{align}
 &X(u,\,v)X(u,\,w)=X(u,\,v+w),\\
-&X(u,\,v)X(u',\,v')X(u,\,v)\inv=X(t(u,\,v)u',\,t(v,\,u)\inv v')
+&X(u,\,v)X(u',\,v')X(u,\,v)\inv=X(t(u,\,v)u',\,t(v,\,u)\inv v').
 \end{align}
-for $n\geq4$~\cite{vdK}.
-Then, it is also obvious that $\phi\colon\St(n,\,R)\rightarrow\E(n,\,R)$ is a central extension.
-Observe that van der Kallen uses pairs of a coloumn and a row $(i,\,j)$ to parametrise his generators, and we prefer two coloumns.
+This presentation clearly implies that $\phi\colon\St(n,\,R)\rightarrow\E(n,\,R)$ is a central extension.
+Notice that our notation for the generators slightly differs from that of~\cite{vdK}, e.\,g. our elements $X(u, v)$ correspond to van der Kallen's $(u, v^t)$.
 
-
-For $I\trianglelefteq R$ denote $\St(n,\,R,\,I)=\Ker\big(\St(n,\,R)\epi\St(n,\,R/I)\big)$ {\it a relative Steinberg group}. Clearly, $\St(n,\,R[X],\,XR[X])$ is the kernel of the evaluation ``$X=0$''.
+For a splitting ideal $I\trianglelefteq R$ the \emph{relative Steinberg group} $\St(n,\,R,\,I)$ can be defined as the kernel $\Ker\big(\St(n,\,R)\epi\St(n,\,R/I)\big)$.
+%Clearly, $\St(n,\,R[X],\,XR[X])$ is the kernel of the evaluation ``$X=0$''.
 
 \section{Yet another presentation for $\St(4, R)$.} \label{sec:yap}
 
