--- a/paper.tex
+++ b/paper.tex
@@ -354,8 +354,7 @@ $$ Y(-e_3,\,e_2)\cdot\,X(e_1,\,e_3a)Y(e_3,\,e_2)X(e_1,\,e_3a)\inv=Y(e_1a,\,e_2).
 
 We can sum up the above discussion into the following result.
 \begin{lm} \label{lm:map-iota}
- For a splitting ideal $I\trianglelefteq R$ there exists a well-defined homomorphism 
- $$\iota\colon\St^*(n,\,R,\,I)\rightarrow\St(n,\,R, I) \subseteq \St(n, R)$$ 
+ For any $I \trianglelefteq R$ there exists a well-defined homomorphism $$\iota\colon\St^*(n,\,R,\,I)\rightarrow\St(n,\,R, I) \subseteq \St(n, R)$$ 
  satisfying the equalities $\iota (F(u,\,v)) = X(u,\,v)$ and $\iota (S(u,\,v)) = Y(u,\,v)$. \end{lm}
 \begin{proof}
 We already know that $\iota$ is well-defined. It suffices to check that the image of $\iota$ is contained in $\St(n,\,R,I)$.
